[gd_scene load_steps=14 format=3 uid="uid://b5f4cvf272kh2"]

[ext_resource type="Script" path="res://Scenes/characters/battle/battle_entity.gd" id="1_xrh1h"]
[ext_resource type="PackedScene" uid="uid://djw4yjejthj5q" path="res://Scenes/state_chart_battle.tscn" id="3_n46cr"]
[ext_resource type="PackedScene" uid="uid://b7x2uimrghas2" path="res://test_junk/debug_3d_text.tscn" id="4_0krx5"]
[ext_resource type="PackedScene" uid="uid://b4jd53pda4276" path="res://Logic/components/component_animation.tscn" id="5_mdf11"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://biw8mj4onqdoy" path="res://Resources/AnimationNodeStateMachine/battle/default_battle.tres" id="5_mi4sx"]
[ext_resource type="PackedScene" uid="uid://ci3yj38s28xgq" path="res://Logic/components/component_ability.tscn" id="13_b0o3b"]
[ext_resource type="Script" path="res://Logic/components/component_state_controller_battle.gd" id="14_yhqed"]
[ext_resource type="Script" path="res://Logic/components/component_health.gd" id="15_76mtu"]
[ext_resource type="Script" path="res://Logic/components/component_vis.gd" id="16_c1w3d"]
[ext_resource type="Script" path="res://Logic/components/component_animation_controller_battle.gd" id="17_jodlc"]
[ext_resource type="Script" path="res://Logic/components/component_physics.gd" id="18_t1psr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qdplk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j6r5n"]

[node name="battle_entity" type="CharacterBody3D" node_paths=PackedStringArray("state_chart", "collider", "animations", "my_component_health", "my_component_vis", "my_component_ability", "my_component_state_controller_battle", "my_component_physics")]
collision_layer = 0
script = ExtResource("1_xrh1h")
state_chart = NodePath("StateChart")
collider = NodePath("CollisionShape3D")
animations = NodePath("Components/component_animation")
my_component_health = NodePath("Components/component_health")
my_component_vis = NodePath("Components/component_vis")
my_component_ability = NodePath("Components/component_ability")
my_component_state_controller_battle = NodePath("Components/component_state_controller_battle")
my_component_physics = NodePath("Components/component_physics")
spacing = Vector3(0.35, 0, -0.1)

[node name="DEBUG_3D_TEXT" parent="." instance=ExtResource("4_0krx5")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_qdplk")

[node name="StateChart" parent="." instance=ExtResource("3_n46cr")]
unique_name_in_owner = true

[node name="Components" type="Node3D" parent="."]

[node name="component_animation" parent="Components" instance=ExtResource("5_mdf11")]

[node name="character_animation_sprite" parent="Components/component_animation/AnimationTransform" index="0"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
sprite_frames = SubResource("SpriteFrames_j6r5n")

[node name="character_animation_tree" parent="Components/component_animation" index="3" node_paths=PackedStringArray("my_owner")]
tree_root = ExtResource("5_mi4sx")
parameters/Death/TimeScale/scale = 1.0
parameters/Hurt/TimeScale/scale = 0.6
parameters/Idle/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/Idle/TimeScale/scale = 1.0
parameters/Walk/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/Walk/TimeScale/scale = 1.0
"parameters/Walk 2/BlendSpace2D/blend_position" = Vector2(0, 0)
"parameters/Walk 2/TimeScale/scale" = 1.0
parameters/default_attack/TimeScale/scale = 1.0
my_owner = NodePath("../../..")

[node name="component_ability" parent="Components" instance=ExtResource("13_b0o3b")]

[node name="component_state_controller_battle" type="Node" parent="Components" node_paths=PackedStringArray("my_component_ability")]
script = ExtResource("14_yhqed")
my_component_ability = NodePath("../component_ability")

[node name="component_health" type="Node" parent="Components"]
script = ExtResource("15_76mtu")

[node name="component_vis" type="Node" parent="Components"]
script = ExtResource("16_c1w3d")
max_vis = 12

[node name="component_animation_controller_battle" type="Node" parent="Components" node_paths=PackedStringArray("my_component_physics", "animations")]
script = ExtResource("17_jodlc")
my_component_physics = NodePath("../component_physics")
animations = NodePath("../component_animation")

[node name="component_physics" type="Node" parent="Components"]
script = ExtResource("18_t1psr")

[editable path="Components/component_animation"]
[editable path="Components/component_ability"]
